test/corpus/free_form_markup.txt
================================================================================
Free form Bold
================================================================================
Here is some *|free form bold|* markup.
Here is some *| free form bold|* markup.
Here is some *|free form bold |* markup.
Here is some *| free form bold |* markup.
Here is some *| free form
bold |* markup.
*| Extend as *far* as possible |*
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))))

================================================================================
Free form Italic
================================================================================
Here is some /|free form italic|/ markup.
Here is some /| free form italic|/ markup.
Here is some /|free form italic |/ markup.
Here is some /| free form italic |/ markup.
Here is some /| free form
italic |/ markup.
/| Extend as /far/ as possible |/
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (italic
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (free_form_close)))))

================================================================================
Free form Strikethrough
================================================================================
Here is some -|free form strikethrough|- markup.
Here is some -| free form strikethrough|- markup.
Here is some -|free form strikethrough |- markup.
Here is some -| free form strikethrough |- markup.
Here is some -| free form
strikethrough |- markup.
-| Extend as -far- as possible |-
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (free_form_close)))))

================================================================================
Free form Underline
================================================================================
Here is some _|free form underline|_ markup.
Here is some _| free form underline|_ markup.
Here is some _|free form underline |_ markup.
Here is some _| free form underline |_ markup.
Here is some _| free form
underline |_ markup.
_| Extend as _far_ as possible |_
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (underline
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (free_form_close)))))

================================================================================
Free form Spoiler
================================================================================
Here is some !|free form spoiler|! markup.
Here is some !| free form spoiler|! markup.
Here is some !|free form spoiler |! markup.
Here is some !| free form spoiler |! markup.
Here is some !| free form
spoiler |! markup.
!| Extend as !far! as possible |!
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (spoiler
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (free_form_close)))))

================================================================================
Free form Superscript
================================================================================
Here is some ^|free form superscript|^ markup.
Here is some ^| free form superscript|^ markup.
Here is some ^|free form superscript |^ markup.
Here is some ^| free form superscript |^ markup.
Here is some ^| free form
superscript |^ markup.
^| Extend as ^far^ as possible |^
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (superscript
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (free_form_close)))))

================================================================================
Free form Subscript
================================================================================
Here is some ,|free form subscript|, markup.
Here is some ,| free form subscript|, markup.
Here is some ,|free form subscript |, markup.
Here is some ,| free form subscript |, markup.
Here is some ,| free form
subscript |, markup.
,| Extend as ,far, as possible |,
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (subscript
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (free_form_close)))))

================================================================================
Free form Verbatim
================================================================================
Here is some `|free form verbatim|` markup.
Here is some `| free form verbatim|` markup.
Here is some `|free form verbatim |` markup.
Here is some `| free form verbatim |` markup.
Here is some `| free form
verbatim |` markup.
`| Extend as `far` as possible |`
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))))

================================================================================
Free form Inline Comment
================================================================================
Here is some %|free form inline_comment|% markup.
Here is some %| free form inline_comment|% markup.
Here is some %|free form inline_comment |% markup.
Here is some %| free form inline_comment |% markup.
Here is some %| free form
inline_comment |% markup.
%| Extend as %far% as possible |%
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (free_form_close)))))

================================================================================
Free form Inline Math
================================================================================
Here is some $|free form inline_math|$ markup.
Here is some $| free form inline_math|$ markup.
Here is some $|free form inline_math |$ markup.
Here is some $| free form inline_math |$ markup.
Here is some $| free form
inline_math |$ markup.
$| Extend as $far$ as possible |$
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))))

================================================================================
Free form Inline Macro
================================================================================
Here is some &|free form inline macro|& markup.
Here is some &| free form inline macro|& markup.
Here is some &|free form inline macro |& markup.
Here is some &| free form inline macro |& markup.
Here is some &| free form
inline macro |& markup.
&| Extend as &far& as possible |&
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (inline_macro
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_macro
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_macro
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_macro
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_macro
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_macro
        (free_form_open)
        (free_form_close)))))

================================================================================
Nesting into Free form Bold
================================================================================
*|Bold and /italic/|*
*|Bold and -struck through-|*
*|Bold and _underlined_|*
*|Bold and !spoiler!|*
*|Bold and ^superscript^|*
*|Bold and ,subscript,|*
*|Bold and /|italic|/|*
*|Bold and -|struck through|-|*
*|Bold and _|underlined|_|*
*|Bold and !|spoiler|!|*
*|Bold and ^|superscript|^|*
*|Bold and ,|subscript|,|*
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (bold
        (free_form_open)
        (italic)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (strikethrough)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (underline)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (spoiler)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (superscript)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (subscript)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (italic
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (strikethrough
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (underline
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (spoiler
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (superscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (subscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))))

================================================================================
Nesting into Free form Italic
================================================================================
/|Italic and *bold*|/
/|Italic and -struck through-|/
/|Italic and _underlined_|/
/|Italic and !spoiler!|/
/|Italic and ^superscript^|/
/|Italic and ,subscript,|/
/|Italic and *|bold|*|/
/|Italic and -|struck through|-|/
/|Italic and _|underlined|_|/
/|Italic and !|spoiler|!|/
/|Italic and ^|superscript|^|/
/|Italic and ,|subscript|,|/
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (italic
        (free_form_open)
        (bold)
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (strikethrough)
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (underline)
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (spoiler)
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (superscript)
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (subscript)
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (bold
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (strikethrough
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (underline
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (spoiler
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (superscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (subscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))))

================================================================================
Nesting into Free form Strikethrough
================================================================================
-|Strikethrough and *bold*|-
-|Strikethrough and /italic/|-
-|Strikethrough and _underlined_|-
-|Strikethrough and !spoiler!|-
-|Strikethrough and ^superscript^|-
-|Strikethrough and ,subscript,|-
-|Strikethrough and *|bold|*|-
-|Strikethrough and /|italic|/|-
-|Strikethrough and _|underlined|_|-
-|Strikethrough and !|spoiler|!|-
-|Strikethrough and ^|superscript|^|-
-|Strikethrough and ,|subscript|,|-
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (bold)
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (italic)
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (underline)
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (spoiler)
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (superscript)
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (subscript)
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (bold
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (italic
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (underline
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (spoiler
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (superscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (strikethrough
        (free_form_open)
        (subscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))))

================================================================================
Nesting into Free form Underline
================================================================================
_|Underline and *bold*|_
_|Underline and /italic/|_
_|Underline and -struck through-|_
_|Underline and !spoiler!|_
_|Underline and ^superscript^|_
_|Underline and ,subscript,|_
_|Underline and *|bold|*|_
_|Underline and /|italic|/|_
_|Underline and -|strikethrough|-|_
_|Underline and !|spoiler|!|_
_|Underline and ^|superscript|^|_
_|Underline and ,|subscript|,|_
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (underline
        (free_form_open)
        (bold)
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (italic)
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (strikethrough)
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (spoiler)
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (superscript)
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (subscript)
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (bold
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (italic
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (strikethrough
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (spoiler
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (superscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (underline
        (free_form_open)
        (subscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))))

================================================================================
Nesting into Free form Spoiler
================================================================================
!|Spoiler and *bold*|!
!|Spoiler and /italic/|!
!|Spoiler and -struck through-|!
!|Spoiler and _underline_|!
!|Spoiler and ^superscript^|!
!|Spoiler and ,subscript,|!
!|Spoiler and *|bold|*|!
!|Spoiler and /|italic|/|!
!|Spoiler and -|strikethrough|-|!
!|Spoiler and _|underline|_|!
!|Spoiler and ^|superscript|^|!
!|Spoiler and ,|subscript|,|!
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (spoiler
        (free_form_open)
        (bold)
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (italic)
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (strikethrough)
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (underline)
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (superscript)
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (subscript)
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (bold
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (italic
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (strikethrough
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (underline
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (superscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (spoiler
        (free_form_open)
        (subscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))))

================================================================================
Nesting into Free form Superscript
================================================================================
^|Superscript and *bold*|^
^|Superscript and /italic/|^
^|Superscript and -struck through-|^
^|Superscript and _underline_|^
^|Superscript and !spoiler!|^
^|Superscript and ,subscript,|^
^|Superscript and *|bold|*|^
^|Superscript and /|italic|/|^
^|Superscript and -|strikethrough|-|^
^|Superscript and _|underline|_|^
^|Superscript and !|spoiler|!|^
^|Superscript and ,|subscript|,|^
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (superscript
        (free_form_open)
        (bold)
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (italic)
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (strikethrough)
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (underline)
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (spoiler)
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (subscript)
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (bold
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (italic
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (strikethrough
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (underline
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (spoiler
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (superscript
        (free_form_open)
        (subscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))))

================================================================================
Nesting into Free form Subscript
================================================================================
,|Subscript and *bold*|,
,|Subscript and /italic/|,
,|Subscript and -struck through-|,
,|Subscript and _underline_|,
,|Subscript and !spoiler!|,
,|Subscript and ^superscript^|,
,|Subscript and *|bold|*|,
,|Subscript and /|italic|/|,
,|Subscript and -|strikethrough|-|,
,|Subscript and _|underline|_|,
,|Subscript and !|spoiler|!|,
,|Subscript and ^|superscript|^|,
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (subscript
        (free_form_open)
        (bold)
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (italic)
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (strikethrough)
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (underline)
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (spoiler)
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (superscript)
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (bold
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (italic
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (strikethrough
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (underline
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (spoiler
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (subscript
        (free_form_open)
        (superscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))))

================================================================================
Nesting into Inline Comment
================================================================================
%|Inline comment and *bold*|%
%|Inline comment and /italic/|%
%|Inline comment and -struck through-|%
%|Inline comment and _underline_|%
%|Inline comment and !spoiler!|%
%|Inline comment and ^superscript^|%
%|Inline comment and ,subscript,|%
%|Inline comment and *|bold|*|%
%|Inline comment and /|italic|/|%
%|Inline comment and -|strikethrough|-|%
%|Inline comment and _|underline|_|%
%|Inline comment and !|spoiler|!|%
%|Inline comment and ^|superscript|^|%
%|Inline comment and ,|subscript|,|%
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (bold)
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (italic)
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (strikethrough)
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (underline)
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (spoiler)
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (superscript)
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (subscript)
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (bold
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (italic
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (strikethrough
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (underline
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (spoiler
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (superscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))
    (paragraph_segment
      (inline_comment
        (free_form_open)
        (subscript
          (free_form_open)
          (free_form_close))
        (free_form_close)))))

================================================================================
Deep Nesting
================================================================================
*|Bold /italic _underlined -struck through-_/|*
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (bold
        (free_form_open)
        (italic
          (underline
            (strikethrough)))
        (free_form_close)))))

================================================================================
No nested markup inside free form verbatim
================================================================================
`|*not bold*|`
`|/not italic/|`
`|-not struck through-|`
`|_not underlined_|`
`|!not spoiler!|`
`|^not superscripted^|`
`|,not subscripted,|`
`|+not inline comment+|`
`|$not inline math$|`
`|&not inline macro&|`
`|no:*link modifier*|`
`|hidden \*escaped char|`
`|*|not free form bold|*|`
`|/|not free form italic|/|`
`|-|not free form struck through|-|`
`|_|not free form underlined|_|`
`|!|not free form spoiler|!|`
`|^|not free form superscripted|^|`
`|,|not free form subscripted|,|`
`|+|not free form inline comment|+|`
`|$|not free form inline math|$|`
`|&|not free form inline macro|&|`

--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (verbatim
        (free_form_open)
        (free_form_close)))))

================================================================================
No nested markup inside free form inline math
================================================================================
$|*not bold*|$
$|/not italic/|$
$|-not struck through-|$
$|_not underlined_|$
$|!not spoiler!|$
$|^not superscripted^|$
$|,not subscripted,|$
$|`not verbatim`|$
$|+not inline comment+|$
$|&not inline macro&|$
$|no:*link modifier*|$
$|hidden \*escaped char|$
$|*|not free form bold|*|$
$|/|not free form italic|/|$
$|-|not free form struck through|-|$
$|_|not free form underlined|_|$
$|!|not free form spoiler|!|$
$|^|not free form superscripted|^|$
$|,|not free form subscripted|,|$
$|`|not free form verbatim|`|$
$|+|not free form inline comment|+|$
$|&|not free form inline macro|&|$

--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (inline_math
        (free_form_open)
        (free_form_close)))))
